src/test/wacc/invalid/semanticErr/array/arrayIndexNotInt.wacc
# Attempting to access an array with a non-integer index.
# Thanks to Ethan Range, Fawwaz Abdullah, Robbie Buxton, and Edward Hartley

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int[] a = [1, 2];
  int b = a["horse"]
end
